--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "luxon": "^3.4.0",
     "node-cron": "^3.0.2",
     "nodemailer": "^6.9.2",
-    "nodemon": "^2.0.20",
-    "pg": "^8.8.0",
+    "nodemon": "^3.1.0",
+    "pg": "^8.11.5",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.28.0",
-    "sharp": "^0.31.3"
+    "sequelize": "^6.37.3",
+    "sequelize-auto": "^0.8.8",
+    "sharp": "^0.33.4"
   }
 }
